[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/player/bulletKin/playerKinBullet.gd" type="Script" id=1]
[ext_resource path="res://src/player/effects/exploisonEffects.tscn" type="PackedScene" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.6
height = 1.2

[sub_resource type="SphereShape" id=2]
radius = 0.640797

[node name="playerKinBullet" type="Area" groups=[
"player",
]]
process_priority = 1
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="bulletDespawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="exploisonEffects" parent="." instance=ExtResource( 2 )]
emitAtStart = false

[connection signal="finishedParticles" from="exploisonEffects" to="." method="_on_exploisonEffects_finishedParticles"]
